--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -100,6 +100,7 @@
             color:rgb(216, 22, 59);
             text-shadow: 1px 1px rgb(252, 220, 149);
         }
+        #accreditations{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;}
         #shama-offer{
             list-style: none;
             display:grid;
@@ -197,6 +198,12 @@
     </li>
     {% endfor %}
     </ul>
+    <div id="accreditations">
+        {% for Accreditation in page.Accreditations %}
+        <img src="{{Accreditation.logo}}"/>
+        {% endfor %}
+    </div>
+
     {{ content }}
     </section>
 
