--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -90,7 +90,7 @@
         font-size: 22px;
         color:white;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        text-shadow: 1px 1px rgb(3, 3, 3);
+        xtext-shadow: 1px 1px rgb(3, 3, 3);
         }
         #roots h1{
             font-weight: bold;
@@ -122,7 +122,7 @@
             font-size: 18px;
             color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            text-shadow: 1px 1px rgb(3, 3, 3);
+            xtext-shadow: 1px 1px rgb(3, 3, 3);
             margin-bottom:20px;
             break-inside: avoid;
             -webkit-column-break-inside: avoid;
