--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="https://lh3.googleusercontent.com/-QlSQ4-vrBxo/WyEQhkOHniI/AAAAAAAABOw/VHf8kxvD3r8aOFZBDXVUKssNya1lUfafQCL0BGAs/w400-e30/bigshamalogoorange.png"/>
+    <img class="photo-right" src="https://lh3.googleusercontent.com/-Y2T098nPvCA/WyWMgFKOoBI/AAAAAAAABVk/niqgl0M23IsDGRUzCsvnRlZxQrg93SC_wCJoC/s400-e30/yellowshadowlogo.png"/>
     </h1>
     </div>
     <!-- Keep all page content within the page-content inset div! -->
@@ -59,7 +59,7 @@
     </div>
     </div>
 
-{% include footer.html %}<!-- END Footer -->
+<!-- END Footer -->
 <!-- Custom JavaScript for the Menu Toggle -->
 <script>
 //<![CDATA[
