--- a/_layouts/testimonial.html
+++ b/_layouts/testimonial.html
@@ -16,50 +16,27 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="//lh3.googleusercontent.com/-uxk3bsCn-Uk/WxgCKv_X-jI/AAAAAAAAA8w/rGdoNqMRGsAXiO1DTk1kYJCjDwpICuEBgCJoC/s340/newShamalogo.png">
+    <img class="photo-right" src="https://lh3.googleusercontent.com/-Y2T098nPvCA/WyWMgFKOoBI/AAAAAAAABVk/niqgl0M23IsDGRUzCsvnRlZxQrg93SC_wCJoC/s400-e30/yellowshadowlogo.png">
     </h1>
     </div>
-    <!-- Keep all page content within the page-content inset div! -->
-    <div class="page-content inset">
+
     <div class="container" id="container">
     <div class="row">
     <div class="col-12 col-sm-12 col-lg-12 clearfix">
-    <div class="post-outer">
-    <div class="post hentry">
-    <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
-    <div class="top section" id="top"><div class="widget HTML" data-version="1" id="HTML1">
-    <div class="widget-content">
+
     {% include testimonials.html %}
-    </div>
-    </div></div>
-    </div>
-    </div>
-    <div class="main section" id="main"><div class="widget Blog" data-version="1" id="Blog1">
-    <div class="blog-posts hfeed">
-    <!--Can't find substitution for tag [adEnd]-->
-    </div>
-    <div class="blog-feeds">
-    <div class="feed-links">
-    Subscribe to:
-    <a class="feed-link" href="https://www.shamayoga.org.uk/feeds/posts/default" target="_blank" type="application/atom+xml">Posts (Atom)</a>
-    </div>
-    </div>
-    </div></div>
-    <!-- END Loop -->
+ 
     </div>
     <!-- END Content -->
-    <div class="col-6 col-sm-4 col-lg-4">
-    <div class="sidebox">
-    <div class="sidebar no-items section" id="sidebar"></div>
-    </div>
-    </div>
+ 
     </div>
     </div>
     <!-- END Container -->
-    </div>
+
     </div>
 
-{% include footer.html %}<!-- END Footer -->
+{% include footer.html %}
+<!-- END Footer -->
 <!-- Custom JavaScript for the Menu Toggle -->
 <script>
 //<![CDATA[
