Drop Cap on roots text

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -92,6 +92,11 @@
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         xtext-shadow: 1px 1px rgb(3, 3, 3);
         }
+        #roots-text p.drop-cap:first-letter {
+            font-size: 4.5em;
+            float: left;
+            margin-top: .15em;
+        }
         #roots h1{
             font-weight: bold;
             font-size: 5em;
