--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -96,6 +96,7 @@
             font-size: 4.1em;
             float: left;
             margin-top: .13em;
+            padding: 0.1em
         }
         #roots h1{
             font-weight: bold;
