--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -72,6 +72,7 @@
             font-weight:bold;
         }
         h1{
+            text-align: center;
         }
         #roots{
             padding:95px 75px 75px 75px;
@@ -100,7 +101,8 @@
         }
         #roots h1{
             font-weight: bold;
-            font-size: 5em;
+            font-size: 7em;
+            text-align: center;
             letter-spacing:0.13em;
             /*margin-top:20px;*/
             color:rgb(216, 22, 59);
