--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -126,7 +126,9 @@
             color:rgb(216, 22, 59);
             text-shadow: 1px 1px rgb(252, 220, 149);
         }
-        #accreditations{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
+        #accreditations, #socialfooter{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
+        #socialfooter{list-style:none;}
+        #socialfooter img{background-color: none;}
         #hp-testimonials{
             list-style: none;
             xdisplay:grid;
@@ -162,6 +164,7 @@
             display: block;
         }
         .testimonee{display:block;color:rgb(207, 207, 207);font-family:Arial, Helvetica, sans-serif;text-shadow: none;}
+        
 
         @media only screen and (max-width: 768px) {
             #roots h1{
