--- a/_layouts/tutors.html
+++ b/_layouts/tutors.html
@@ -26,15 +26,14 @@
     <h2 class="shamafont">{{ page.title }}</h2>
     <br/>
     <div id="workshops">
-    {% for workshop in page.workshops %}
+    {% for tutor in page.tutors %}
         <div class="workshop">
-        <h3>{{ workshop.Title }}</h3>
-        <h4>{{ workshop.Date }}</h4>   
-        <div>{{ workshop.Description }}</div>
-        <div>Venue: {{ workshop.Venue }}</div>
-        <div>Presented by: {{ workshop.Presenter }}</div>
-        <div>Cost of workshop: {{ workshop.Price }}</div>
-    </div>
+        <h3>{{ tutor.name }}</h3>
+        <center><img src="{{ tutor.image }}"/></center>
+        
+        <p>{{ tutor.bio }}</p> 
+        </div>    
+    
         
      {% endfor %}
     </div>
