--- a/_layouts/tutors.html
+++ b/_layouts/tutors.html
@@ -50,6 +50,7 @@
 
 <!-- END Footer -->
 <!-- Custom JavaScript for the Menu Toggle -->
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js' type='text/javascript'></script><!--?ver=2.1.0 -->
 <script>
 //<![CDATA[
     $('#menu-toggle').click(function(e) {
