events template and css

--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -35,7 +35,7 @@
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
     <div class="top section" id="top"><div class="widget HTML" data-version="1" id="HTML1">
     <div class="widget-content">
-    <div id="notgallery">
+    <div id="gallery">
             <button class="display-left" onclick="plusDivs(-1)">&#10094;</button>
             <button class="display-right" onclick="plusDivs(1)">&#10095;</button>
                 {% for gimage in page.gallery_images %}
