--- a/css/editor.css
+++ b/css/editor.css
@@ -1,2 +1,3 @@
     img.photo-right{float:right; padding: 20px;}
     img.photo-left{float:left; padding: 20px;}
+    p.drop-cap{font-size: 4.1em;float: left;margin-top: .13em;padding: 0.1em;font-style: normal;}
