Updated '_layouts/homepage.html' via CloudCannon

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -222,7 +222,7 @@
 
 </header>
 <div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk">
-    <img src="https://lh3.googleusercontent.com/--bYfKSMaZ5w/WzTy19fe4KI/AAAAAAAABrs/mALY0qV2Nr8Pu15tl39ILgWSI8MNjU-OACJoC/s0-e30/bigshamalogo.png"/></a></center></div>
+    <img src="https://lh3.googleusercontent.com/G0NCWxDfDNldPvRk0JmrXSaxrPHPX-srHZoxo65Ll-EzhAelKTCkdJOVEXY2B6ZcGtSdC3hko6DciYNz3A=s0-e30?.jpg"/></a></center></div>
 
     {% include overlay-nav.html %}
    
