Updated '_layouts/page.html' via CloudCannon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="https://lh3.googleusercontent.com/-E_X2QT38l4k/WzT4Vxalk-I/AAAAAAAABtw/qFXOz5URuikiXw-NGeAy4kGttg6440QPgCJoC/s400-e30/bigshamanoshadow.png"/>
+    <img class="photo-right" src="https://lh3.googleusercontent.com/ZzwfefdlIi4WI08MH4sg-nh4UPhy5VKNGz9pRqT0v3XlRZ3Wjex6vYBgXOBhhzTwSTp-Df8and-_-WMGoQ=s400-e30"/>
     </h1>
     </div>
     <!-- Keep all page content within the page-content inset div! -->
