Updated '_layouts/gallery_page.html' via CloudCannon

--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -22,7 +22,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="//lh3.googleusercontent.com/-uxk3bsCn-Uk/WxgCKv_X-jI/AAAAAAAAA8w/rGdoNqMRGsAXiO1DTk1kYJCjDwpICuEBgCJoC/s340/newShamalogo.png">
+    <img class="photo-right" src="https://lh3.googleusercontent.com/ZzwfefdlIi4WI08MH4sg-nh4UPhy5VKNGz9pRqT0v3XlRZ3Wjex6vYBgXOBhhzTwSTp-Df8and-_-WMGoQ=s400-e30">
     </h1>
     </div>
     <!-- Keep all page content within the page-content inset div! -->
