--- a/_layouts/tutors.html
+++ b/_layouts/tutors.html
@@ -16,7 +16,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    <img class="photo-right" src="https://lh3.googleusercontent.com/-Y2T098nPvCA/WyWMgFKOoBI/AAAAAAAABVk/niqgl0M23IsDGRUzCsvnRlZxQrg93SC_wCJoC/s400-e30/yellowshadowlogo.png">
+    <img class="photo-right" src="https://lh3.googleusercontent.com/ZzwfefdlIi4WI08MH4sg-nh4UPhy5VKNGz9pRqT0v3XlRZ3Wjex6vYBgXOBhhzTwSTp-Df8and-_-WMGoQ=s400-e30">
     </h1>
     </div>
 
