Updated '_layouts/workshops.html' via CloudCannon

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -24,6 +24,7 @@
     <div class="row">
     <div class="col-12 col-sm-12 col-lg-12 clearfix">
     <h2 class="shamafont">{{ page.title }}</h2>
+    <img src="{{page.hero_image}}"/>
     <br/>
     <div id="workshops">
     {% for workshop in page.workshops %}
