--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -33,7 +33,7 @@
         <div class="workshop">
         <h3>{{ workshop.Title }}</h3>
         <h4>{{ workshop.workshopDate }} {{ workshop.workshopTime }}</h4>   
-        <div>{{ workshop.Description }}</div>
+        <div>{{ workshop.Description_html }}</div>
         <div>Venue: {{ workshop.Venue }}</div>
         <div>Presented by: {{ workshop.Presenter }}</div>
         <div>Cost of workshop: {{ workshop.Price }}</div>
