--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -34,9 +34,9 @@
         <h3>{{ workshop.Title }}</h3>
         <h4>{{ workshop.workshopDate }} {{ workshop.workshopTime }}</h4>   
         <div>{{ workshop.Description_html }}</div>
-        <div>Venue: {{ workshop.Venue }}</div>
-        <div>Presented by: {{ workshop.Presenter }}</div>
-        <div>Cost of workshop: {{ workshop.Price }}</div>
+        <div><b>Venue</b>: {{ workshop.Venue }}</div>
+        <div><b>Presented by</b>: {{ workshop.Presenter }}</div>
+        <div><b>Cost of workshop</b>: {{ workshop.Price }}</div>
     </div>
         
      {% endfor %}
