--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -25,7 +25,7 @@
     <div class="col-12 col-sm-12 col-lg-12 clearfix">
     <h2 class="shamafont">{{ page.title }}</h2>
     {% if page.hero_image %}
-    <img src="{{page.hero_image}}"/>
+    <img src="{{page.hero_image}}"/></br>
     {% endif %}
     <br/>
     <div id="workshops">
