--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -31,8 +31,8 @@
     <div id="workshops">
     {% for workshop in page.workshops %}
         <div class="workshop">
-        <h3>{{ workshop.Title }}</h3>
-        <h4>{{ workshop.workshopDate }} {{ workshop.workshopTime }}</h4>   
+        <h3>{{ workshop.workshopDate }} {{ workshop.workshopTime }} </h3>
+        <h4><{{ workshop.Title }}/h4>   
         <div>{{ workshop.Description_html }}</div>
         <div><b>Venue</b>: {{ workshop.Venue }}</div>
         <div><b>Presented by</b>: {{ workshop.Presenter }}</div>
