--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -34,9 +34,9 @@
         <h3>{{ event.eventDate }} {{ event.eventTime}}</h3>
         <h4>{{ event.Title }}</h4>   
         <div>{{ event.Description }}</div>
-        <div>Venue: {{ event.Venue }}</div>
-        <div>Presented by: {{ event.Presenter }}</div>
-        <div>Cost of event: {{ event.Price }}</div>
+        <div><b>Venue</b>: {{ event.Venue }}</div>
+        <div><b>Presented by</b>: {{ event.Presenter }}</div>
+        <div><b>Cost of event</b>: {{ event.Price }}</div>
     </div>
         
      {% endfor %}
