Updated 'css/styles.css' via CloudCannon

--- a/css/styles.css
+++ b/css/styles.css
@@ -5263,7 +5263,7 @@ padding-left:14px;
     margin: -20px -20px 0px -20px;
     font-size: 16px;
 }
-.event-footer{position:absolute; bottom: 2%;}
+/*.event-footer{position:absolute; bottom: 2%;} */
 /* cloudcannon alignment*/
     .align-left{text-align:left;}
     .center-this-text{text-align:center;}
