Updated '_layouts/page.html' via CloudCannon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,6 +27,9 @@
     <div class="post-outer">
     <div class="post hentry">
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
+    {% if page.hero-image %}
+     <img src="{{ page.hero-image }}" />
+    {% endif%}
     <div class="top section" id="top">
         
     
