--- a/css/styles.css
+++ b/css/styles.css
@@ -5229,6 +5229,7 @@ padding-left:14px;
     .photo-left{float:left; padding: 20px;}*/
     img.photo-right{float:right; padding: 20px;}
     img.photo-left{float:left; padding: 20px;}
+    .clear-both{clear:both;}
     p.drop-cap{color:inherit;}
     p.drop-cap::first-letter{font-size: 4.1em;float: left;margin-top: .13em;padding: 0.1em;font-style: normal;}
     .photo-tutor{float:left;padding:0px 10px 10px 0px;}
