Updated '_layouts/homepage.html' via CloudCannon

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -257,7 +257,7 @@
     </ul>
     <div id="accreditations">
         {% for Accreditation in page.Accreditations %}
-            <img src="{{Accreditation.logo}}"/>
+            <img src="{{Accreditation.logo_image}}"/>
         {% endfor %}
     </div>
 
