Updated '_layouts/homepage.html' via CloudCannon

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -16,10 +16,11 @@
         .list {
         padding-left: 0;
         list-style: none;
-        display: grid;
+        display: block;
         grid-column-gap: 24px;
         grid-row-gap: 42px;
         grid-template-columns: 1fr 1fr 1fr;
+        display: grid;
         }
           .circle {
             flex: 1;
