--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -29,6 +29,7 @@
             border-radius: 50%;
             /*margin: 5px;*/
             margin:5px 5px 40px 5px;
+            height: 90%;
           }
           .circle:before {
             content: "";
