--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -2,11 +2,9 @@
 <body class='home-page' ></body>
     <style>
 
-        .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
+        .home-page{background-image:url(https://res.cloudinary.com/shamayoga/image/upload/v1531297422/shamayoga.org.uk/bluebackground.gif);background-size:cover;}
         
-        /*http://www.clipular.com/c/6340060367290368.png?k=YYCfRwH_c2CumZ7iAoOZ8uIqgjw */
-            /*url(https://lh3.googleusercontent.com/-unZWJEV4FN4/Wx5VOFldD5I/AAAAAAAABB4/WIn-8Nt8FuYLPpSfRH2jIBPNgC-bKuZzgCJoC/w1000-e30/lotus_wallpaper.jpg );background-size:cover;}*/
-
+      
         a{text-decoration:none;}
         img {max-width: 100%;height: auto;}
 
@@ -49,6 +47,24 @@
         padding: 4px;
         xborder-radius: 50px 50px;
         }
+        .bubble-popup-menu{display:none;visibility:hidden;padding: 10% 0 0 0;}
+        .circle:hover .bubble-popup-menu {
+            display: inline-block;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            color: white;
+            visibility: visible;
+            background: rgba(3, 155, 223, 0.8);
+            width: 100%;
+            text-align: center;
+            xmargin: auto;
+            list-style: none;
+            height: 100%;
+            
+            border-radius: 50%;
+        }
+        .bubble-popup-menu li a{color:white;font-size: 18px;line-height: 1.6em;}
 
         .xtop{top: 12%;}
         .xbottom{bottom: 12%;}
@@ -72,12 +88,13 @@
             font-weight:bold;
         }
         h1{
+            text-align: center;
         }
         #roots{
             padding:95px 75px 75px 75px;
             margin: 100px 0px 40px 0px;;
             background-color: rgba(255,255,255,0.25);
-            border: 1px solid rgb(252, 220, 149));
+            border: 1px solid rgb(252, 220, 149);
         }
         #roots-text{
          
@@ -90,45 +107,62 @@
         font-size: 22px;
         color:white;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        text-shadow: 1px 1px rgb(3, 3, 3);
+        xtext-shadow: 1px 1px rgb(3, 3, 3);
+        }
+        #roots-text p.drop-cap:first-letter {
+            font-size: 4.1em;
+            float: left;
+            margin-top: .13em;
+            padding: 0.1em
         }
         #roots h1{
             font-weight: bold;
-            font-size: 5em;
+            font-size: 7em;
+            text-align: center;
             letter-spacing:0.13em;
             /*margin-top:20px;*/
             color:rgb(216, 22, 59);
             text-shadow: 1px 1px rgb(252, 220, 149);
         }
-        #accreditations{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;}
-        #shama-offer{
+        #accreditations, #socialfooter{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
+        #socialfooter{list-style:none;}
+        #socialfooter img{background-color: none;}
+        #hp-testimonials{
             list-style: none;
-            display:grid;
-            grid-auto-columns: minmax(10px, auto);
-            grid-template-columns: 1fr 1fr ;
-            grid-gap: 32px;
+            xdisplay:grid;
+            xgrid-auto-columns: minmax(10px, auto);
+            xgrid-template-columns: 1fr 1fr ;
+            xgrid-gap: 32px;
             padding: 20px;
+            column-count: 2;
+            -webkit-column-count: 2;
+            column-gap: 40px;
+            -webkit-column-gap: 40px;
 
         }
 
-        #shama-offer li{
+        #hp-testimonials li{
             background-color: rgba(255,255,255,0.25);
             border: 1px solid rgb(252, 220, 149);
             padding: 24px;
             font-size: 18px;
             color:white;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            text-shadow: 1px 1px rgb(3, 3, 3);
+            xtext-shadow: 1px 1px rgb(3, 3, 3);
             margin-bottom:20px;
+            break-inside: avoid;
+            -webkit-column-break-inside: avoid;
         }
         svg{fill:red;}
-        #shama-offer li::before{
-            content:url(https://lh3.googleusercontent.com/-fGsnzRDk58Y/Wx6OaJMS2iI/AAAAAAAABG8/7v1D41VdLRgfvNgzyCxMV8itD8sar8K7ACJoC/s60-c-e30/sun.png);/*"☸";/*"ॐ";*/
-            font-size:60px;
+        #hp-testimonials li::before{
+            content:url(https://lh3.googleusercontent.com/-fGsnzRDk58Y/Wx6OaJMS2iI/AAAAAAAABG8/7v1D41VdLRgfvNgzyCxMV8itD8sar8K7ACJoC/s40-c-e30/sun.png);/*"☸";/*"ॐ";*/
+            font-size:20px;
             text-align:center;
             color:#e99516;
             display: block;
         }
+        .testimonee{display:block;color:rgb(207, 207, 207);font-family:Arial, Helvetica, sans-serif;text-shadow: none;}
+        
 
         @media only screen and (max-width: 768px) {
             #roots h1{
@@ -156,17 +190,19 @@
                 column-count: 1;
                 font-size: 18px;
             }
-            #shama-offer{
+            #hp-testimonials{
 
                 grid-template-columns: 1fr 1fr;
                 grid-gap: 48px;
+                column-count: 1;
+                -webkit-column-count:1;
             }
         @media only screen and (max-width: 480px) {
             img {max-width: 80%;height: auto;}
         .list{grid-template-columns: 1fr;}
         .list li div{font-size: 11px;}
         .xtop{top:77%;}
-        #shama-offer{grid-template-columns: 1fr ;}
+        #hp-testimonials{grid-template-columns: 1fr ;}
         }
         @media only screen and (max-width: 360px) {
         #open-nav{
@@ -184,27 +220,56 @@
 
 </header>
 <div id="logo"><a id="open-nav" href="#" onclick="openNav()">&#9776;</a><center><a href="https://www.shamayoga.org.uk">
-    <img src="https://lh3.googleusercontent.com/-Y2T098nPvCA/WyWMgFKOoBI/AAAAAAAABVk/niqgl0M23IsDGRUzCsvnRlZxQrg93SC_wCJoC/s0-e30/yellowshadowlogo.png"/></a></center></div>
+    <img src="https://lh3.googleusercontent.com/G0NCWxDfDNldPvRk0JmrXSaxrPHPX-srHZoxo65Ll-EzhAelKTCkdJOVEXY2B6ZcGtSdC3hko6DciYNz3A=s0-e30?.jpg"/></a></center></div>
 
     {% include overlay-nav.html %}
    
    
 <section id="wrapper">
+        
+
+        
  
     <ul class="list" id="list">
     {% for bubble in page.bubbles %}
+    
+            
     <li class="circle " style="background-image: url({{bubble.image}});background-size: cover;">
+    <a href="{{ bubble.url }}">
     <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
+    </a>
+    
+    {% if bubble.popup-menu %}
+    <ul class="bubble-popup-menu">
+        {% for item in bubble.popup-menu %}
+            <li class="bubble-popup-item"><a href="{{ item.link }}">{{ item.text }}</a></li>
+        {% endfor%}
+    </ul>
+    {% endif %}
+
     </li>
+
+
     {% endfor %}
     </ul>
+
+
     <div id="accreditations">
         {% for Accreditation in page.Accreditations %}
-        <img src="{{Accreditation.logo}}"/>
+            <img src="{{Accreditation.logo_image}}"/>
         {% endfor %}
     </div>
 
     {{ content }}
+    <ul id="hp-testimonials">
+        {% for testimonial in page.testimonials %}
+        <li>{{testimonial.testimony}}
+        <span class="testimonee">{{testimonial.name}}</span>
+        </li>
+        {% endfor %}
+    </ul>
+
+
     </section>
 
    
