Updated '_includes/testimonials.html' via CloudCannon

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,3 +1,7 @@
+    {% for testimonial in page.testimonials-new %}
+       <blockquote class="testimonial">{{ testimonial.testimony }}<span class="testimonial-name">{{ testimonial.student }}</span></blockquote>
+       <br>
+    {% endfor %}
     {% for testimonial in page.testimonials %}
        <blockquote class="testimonial">{{ testimonial.testimony }}<span class="testimonial-name">{{ testimonial.student }}</span></blockquote>
        <br>
