--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -10,22 +10,23 @@
 
         #logo{margin: 30px 0px;}
         #logo img {max-width: 70%;height: auto;}
-
+        
         .list {
         padding-left: 0;
         list-style: none;
-        display: grid;
+        /*display: grid;
         grid-column-gap: 24px;
         grid-row-gap: 42px;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;*/
         }
+        .col-md-4{width: 28%;!important}
           .circle {
             flex: 1;
             background: rgba(255,255,255,0.15);
             position:relative;
             border-radius: 50%;
             /*margin: 5px;*/
-            margin:5px 5px 40px 5px;
+            margin: 40px 25px 40px 25px;
           }
           .circle:before {
             content: "";
@@ -33,7 +34,7 @@
             padding-top: 100%; /* ratio of 1:1*/
           }
         
-        .list li div{
+        .circle a div{
         color: 	rgb(216, 22, 59)/*#150DD3*/;
         font-family: Arial, Helvetica, sans-serif;    
         font-size: 18px;
@@ -124,7 +125,9 @@
             color:rgb(216, 22, 59);
             text-shadow: 1px 1px rgb(252, 220, 149);
         }
+        
         #accreditations, #socialfooter{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
+        #accreditations{margin-top: 120px;}
         #socialfooter{list-style:none;}
         #socialfooter img{background-color: none;}
         #hp-testimonials{
@@ -200,7 +203,7 @@
         @media only screen and (max-width: 480px) {
             img {max-width: 80%;height: auto;}
         .list{grid-template-columns: 1fr;}
-        .list li div{font-size: 11px;}
+        .circle a div{font-size: 11px;}
         .xtop{top:77%;}
         #hp-testimonials{grid-template-columns: 1fr ;}
         }
@@ -212,7 +215,7 @@
         }
     }
         @media only screen and (max-width: 320px) {
-            .list li div{font-size: 12px;}
+            .circle a div{font-size: 12px;}
 
             }
         </style>
@@ -230,29 +233,30 @@
 
         
  
-    <ul class="list" id="list">
-    {% for bubble in page.bubbles %}
-    
-            
-    <li class="circle " style="background-image: url({{bubble.image}});background-size: cover;">
-    <a href="{{ bubble.url }}">
-    <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
-    </a>
-    
-    {% if bubble.popup-menu %}
-    <ul class="bubble-popup-menu">
-        {% for item in bubble.popup-menu %}
-            <li class="bubble-popup-item"><a href="{{ item.link }}">{{ item.text }}</a></li>
-        {% endfor%}
-    </ul>
-    {% endif %}
-
-    </li>
-
-
-    {% endfor %}
-    </ul>
-
+    <div class="xxcontainer list" id="list">
+        {% for bubble in page.bubbles %}
+        {% assign mod = forloop.index | modulo: 3 %}
+        <!-- {{ mod }}-->
+        {% if mod == 1 %}
+          <div class="row">
+        {% endif %}
+            <div class="circle col-md-4 col-sm-6 col-xs-12" style="background-image: url({{bubble.image}});background-size: cover;">
+            <a href="{{ bubble.url }}">
+            <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
+            </a>
+                {% if bubble.popup-menu %}
+                    <ul class="bubble-popup-menu">
+                        {% for item in bubble.popup-menu %}
+                            <li class="bubble-popup-item"><a href="{{ item.link }}">{{ item.text }}</a></li>
+                        {% endfor%}
+                    </ul>
+                {% endif %}
+            </div>
+        {% if mod == 0 %}
+        </div><!-- close the loop -->
+        {% endif %}
+        {% endfor %}
+    </div>
 
     <div id="accreditations">
         {% for Accreditation in page.Accreditations %}
