--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -177,6 +177,7 @@
                 top: 12px;
             }
             .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
+            .bubble-popup-menu li a{color:white;font-size: 18px;line-height: 1.6em;}
         }
 
         @media only screen and (max-width: 600px) {
