--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,6 +20,7 @@
         grid-template-columns: 1fr 1fr 1fr;
         display: grid;
         }
+        
           .circle {
             flex: 1;
             background: rgba(255,255,255,0.15);
@@ -28,6 +29,7 @@
             /*margin: 5px;*/
             margin:5px 5px 40px 5px;
             height: 90%;
+            float: left;
           }
           .circle:before {
             content: "";
