--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -65,7 +65,7 @@
             
             border-radius: 50%;
         }
-        .bubble-popup-menu li a{color:white;font-size: 18px;line-height: 1.6em;}
+        .bubble-popup-menu li a{color:white;font-size: 22px;line-height: 1.6em;}
 
         .xtop{top: 12%;}
         .xbottom{bottom: 12%;}
@@ -168,6 +168,7 @@
         
 
         @media only screen and (max-width: 768px) {
+            .bubble-popup-menu li a{color:white;font-size: 16px;}
             #roots h1{
                 font-size: 3em;
                 letter-spacing:0.13em;
@@ -181,6 +182,7 @@
         }
 
         @media only screen and (max-width: 600px) {
+            .bubble-popup-menu li a{color:white;font-size: 16px;}
             #roots{padding:20px;}
             #roots h1{
                 font-size: 2.5em;
