--- a/_layouts/testhome.html
+++ b/_layouts/testhome.html
@@ -22,7 +22,7 @@
         
           .circle {
             flex: 1;
-            background: rgba(255,255,255,0.15);
+            xbackground: rgba(255,255,255,0.15);
             position:relative;
             border-radius: 50%;
             /*margin: 5px;*/
@@ -244,7 +244,7 @@
         {% endif %}
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="circle" style="xbackground-image: url({{bubble.image}});background-size: cover;">
-            <a href="{{ bubble.url }}"><img src="{{bubble.image}}"/>
+            <a href="{{ bubble.url }}"><center><img src="{{bubble.image}}"/></center>
             <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
             </a>
                 {% if bubble.popup-menu %}
