--- a/_layouts/gridhomepage.html
+++ b/_layouts/gridhomepage.html
@@ -10,31 +10,34 @@
 
         #logo{margin: 30px 0px;}
         #logo img {max-width: 70%;height: auto;}
-        
+
         .list {
         padding-left: 0;
         list-style: none;
-        /*display: grid;
+        display: block;
         grid-column-gap: 24px;
         grid-row-gap: 42px;
-        grid-template-columns: 1fr 1fr 1fr;*/
+        grid-template-columns: 1fr 1fr 1fr;
+        display: grid;
         }
         
           .circle {
             flex: 1;
-            xbackground: rgba(255,255,255,0.15);
+            background: rgba(255,255,255,0.15);
             position:relative;
             border-radius: 50%;
             /*margin: 5px;*/
-            margin: 40px 0px 40px 0px;
+            margin:5px 5px 40px 5px;
+            height: 90%;
+            float: left;
           }
           .circle:before {
             content: "";
-            xdisplay: grid;
+            display: grid;
             padding-top: 100%; /* ratio of 1:1*/
           }
-        .circle img{border-radius:50%;}
-        .circle a div{
+        
+        .list li div{
         color: 	rgb(216, 22, 59)/*#150DD3*/;
         font-family: Arial, Helvetica, sans-serif;    
         font-size: 18px;
@@ -125,9 +128,7 @@
             color:rgb(216, 22, 59);
             text-shadow: 1px 1px rgb(252, 220, 149);
         }
-        
-        #accreditations, #socialfooter{width:90%; margin: 80px auto;padding: 20px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
-        #accreditations{padding-top: 90px;}
+        #accreditations, #socialfooter{width:90%; margin: auto;xbackground-color: rgba(255,255,255,0.25);padding: 20px;margin-top:80px;display:flex;justify-content:space-around;flex-wrap: wrap;-webkit-flex-wrap: wrap;display: -webkit-flex;}
         #socialfooter{list-style:none;}
         #socialfooter img{background-color: none;}
         #hp-testimonials{
@@ -168,7 +169,6 @@
         
 
         @media only screen and (max-width: 768px) {
-            .bubble-popup-menu li a{color:white;font-size: 16px;}
             #roots h1{
                 font-size: 3em;
                 letter-spacing:0.13em;
@@ -179,10 +179,10 @@
                 top: 12px;
             }
             .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
+            .bubble-popup-menu li a{color:white;font-size: 18px;line-height: 1.6em;}
         }
 
         @media only screen and (max-width: 600px) {
-            .bubble-popup-menu li a{color:white;font-size: 16px;}
             #roots{padding:20px;}
             #roots h1{
                 font-size: 2.5em;
@@ -205,7 +205,7 @@
         @media only screen and (max-width: 480px) {
             img {max-width: 80%;height: auto;}
         .list{grid-template-columns: 1fr;}
-        .circle a div{font-size: 11px;}
+        .list li div{font-size: 11px;}
         .xtop{top:77%;}
         #hp-testimonials{grid-template-columns: 1fr ;}
         }
@@ -217,7 +217,7 @@
         }
     }
         @media only screen and (max-width: 320px) {
-            .circle a div{font-size: 12px;}
+            .list li div{font-size: 12px;}
 
             }
         </style>
@@ -235,40 +235,35 @@
 
         
  
-    <div class="list" id="list">
-        {% for bubble in page.bubbles %}
-        {% assign mod = forloop.index | modulo: 3 %}
-        <!-- {{ mod }}-->
-        {% if mod == 1 %}
-          <div class="row">
-        {% endif %}
-        <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="circle" style="xbackground-image: url({{bubble.image}});background-size: cover;">
-            <a href="{{ bubble.url }}"><center><img src="{{bubble.image}}"/></center>
-            <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
-            </a>
-                {% if bubble.popup-menu %}
-                    <ul class="bubble-popup-menu">
-                        {% for item in bubble.popup-menu %}
-                            <li class="bubble-popup-item"><a href="{{ item.link }}">{{ item.text }}</a></li>
-                        {% endfor%}
-                    </ul>
-                {% endif %}
-            </div>
-        </div>
-        {% if mod == 0 %}
-        </div><!-- close the loop -->
-        {% endif %}
-        {% endfor %}
-    </div>
-<div class="row">
-    <br/><br/>
+    <ul class="list" id="list">
+    {% for bubble in page.bubbles %}
+    
+            
+    <li class="circle " style="background-image: url({{bubble.image}});background-size: cover;">
+    <a href="{{ bubble.url }}">
+    <div  class="{{ bubble.label-position }} right">{{ bubble.label-text }}</div>
+    </a>
+    {% if bubble.popup-menu %}
+
+    <ul class="bubble-popup-menu">
+        {% for item in bubble.popup-menu %}
+            <li class="bubble-popup-item"><a href="{{ item.link }}">{{ item.text }}</a></li>
+        {% endfor%}
+    </ul>
+
+{% endif %}
+
+    </li>
+
+
+    {% endfor %}
+    </ul>
     <div id="accreditations">
         {% for Accreditation in page.Accreditations %}
             <img src="{{Accreditation.logo_image}}"/>
         {% endfor %}
     </div>
-</div>
+
     {{ content }}
     <ul id="hp-testimonials">
         {% for testimonial in page.testimonials %}
