--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -158,7 +158,7 @@
         }
         svg{fill:red;}
         #hp-testimonials li::before{
-            content:url(https://lh3.googleusercontent.com/-fGsnzRDk58Y/Wx6OaJMS2iI/AAAAAAAABG8/7v1D41VdLRgfvNgzyCxMV8itD8sar8K7ACJoC/s40-c-e30/sun.png);/*"☸";/*"ॐ";*/
+            content:url(https://res.cloudinary.com/shamayoga/image/upload/w_48/v1560255090/shamayoga.org.uk/sun.gif);/*"☸";/*"ॐ";*/
             font-size:20px;
             text-align:center;
             color:#e99516;
