--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -178,7 +178,7 @@
                 left: 12px;
                 top: 12px;
             }
-            .home-page{background-image:url(https://lh3.googleusercontent.com/-4bS624PYUhk/Wx7XExzBGEI/AAAAAAAABHw/2GOtXRXm6RsDzPrMVGb1I-QXYjp5Ey1oACJoC/w1200-e30/bluebackground.gif);background-size:cover;}
+            .home-page{background-image:url(https://res.cloudinary.com/shamayoga/image/upload/v1531297422/shamayoga.org.uk/bluebackground.gif);background-size:cover;}
         }
 
         @media only screen and (max-width: 600px) {
