--- a/css/styles.css
+++ b/css/styles.css
@@ -5281,6 +5281,9 @@ padding-left:14px;
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } 
 .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
+.centre-block{text-align:center;}
+.300yt-font-size{font-size:24px;}
+
 @media only screen and (max-width: 1100px) {
     #workshops, #events{grid-template-columns: 1fr 1fr;}
 }
