--- a/css/styles.css
+++ b/css/styles.css
@@ -5282,7 +5282,7 @@ padding-left:14px;
 .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 .centre-block{text-align:center;}
-.300yt-font-size{font-size:24px;}
+.yto-font-size{font-size:24px;}
 
 @media only screen and (max-width: 1100px) {
     #workshops, #events{grid-template-columns: 1fr 1fr;}
