--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,5 @@
 <meta content='{{page.title}}' property='og:title'/>
 <meta content='' property='og:description'/>
 <link href="https://fonts.googleapis.com/css?family=Skranji:400,700" rel="stylesheet"> 
-<link rel="stylesheet" href="{{ site.url }}/css/styles.css">
+<link rel="stylesheet" href="{{ site.url }}/css/styles.css?33">
 </head>
