--- a/css/styles.css
+++ b/css/styles.css
@@ -5266,7 +5266,9 @@ padding-left:14px;
     margin: -20px -20px 0px -20px;
     font-size: 16px;
 }
+.categories-list h1{padding-bottom:1.5em;}
 .categories-list{line-height:1.5em;}
+.categories-list li{padding-bottom:1em;}
 /*.event-footer{position:absolute; bottom: 2%;} */
 /* cloudcannon alignment*/
     .align-left{text-align:left;}
