--- a/css/styles.css
+++ b/css/styles.css
@@ -4691,7 +4691,7 @@ to {
 }
 @media screen and (min-width:768px) {
     .jumbotron {
-    padding: 50px 60px;
+    padding: 30px;
     border-radius: 6px;
 }
 .jumbotron h1 {
