Updated '_layouts/page.html' via CloudCannon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,6 +21,9 @@
     </div>
     <!-- Keep all page content within the page-content inset div! -->
     <div class="page-content inset">
+      {% if page.hero_image %}
+      <center><img src="page.hero_image"/></center>
+      {% endif %}
     <div class="container" id="container">
     <div class="row">
     <div class="col-12 col-sm-12 col-lg-12 clearfix">
