--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,9 +21,7 @@
     </div>
     <!-- Keep all page content within the page-content inset div! -->
     <div class="page-content inset">
-      {% if page.hero_image %}
-      <center><img src="page.hero_image"/></center>
-      {% endif %}
+
     <div class="container" id="container">
     <div class="row">
     <div class="col-12 col-sm-12 col-lg-12 clearfix">
@@ -31,7 +29,7 @@
     <div class="post hentry">
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
     {% if page.hero-image %}
-     <img src="{{ page.hero-image }}" />
+     <center><img src="{{ page.hero-image }}" /></center>
     {% endif%}
     <div class="top section" id="top">
        {% if page.title %}
