Updated '_layouts/page.html' via CloudCannon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,7 +29,7 @@
     <div class="post hentry">
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
     {% if page.hero-image %}
-     <center><img src="{{ page.hero-image }}" /></center>
+     <center><img src="{{ page.hero_image }}" /></center>
     {% endif%}
     <div class="top section" id="top">
        {% if page.title %}
