--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@
     <div class="post-outer">
     <div class="post hentry">
     <!--<h1 class='post-title entry-title'>Shamayoga School</h1> <div class='post-header'> </div>-->
-    {% if page.hero-image %}
+    {% if page.hero_image %}
      <center><img src="{{ page.hero_image }}" /></center>
     {% endif%}
     <div class="top section" id="top">
